# testtask

./: .gitignore  README.md  docker-compose.yml
bet-maker/: Dockerfile  app.py  config.py  events_data_provider.py  models.py  pg_data_provider.py  pyproject.toml
line-provider/: Dockerfile  app.py  config.py  events_storage.py  main.py  models.py  pyproject.toml
