[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = "Service which accepts bets and other stuff"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
asyncpg = "^0.25.0"
uvicorn = "^0.18.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
