[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = "Service stores information about some events"
authors = ["Ekaterina Kirillova <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
asyncpg = "^0.25.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
